             New options -vef sS to colour elements by symmetry orbit,
             -f aA to colour by average internal angle,
             -f kK to colour sets of faces connected by face sides,
             -e Kk to colour sets of edges connected by edges,
             -vef M to convert colour indexes to values using map
             -I to convert colour values to indexes
           unipoly,johnson: programs removed, models are in resources
              see 'off_util -H uniform' and 'off_util -H johnson'
           polygon: many new models added, antiprism alignment changed
           geodesic: option reorganisation, remove base models
           bravais: option -R also fills and overlays with cubes
           iso_delta: new colouring options
           n_icons: fractional polygon models, colouring option
              changes
           pol_recip: default centre is centroid, new option -a
             appends dual to original geometry
           antiview,off2vrml,off2pov: new option -s to display
             symmetry elements, -I infinity distance default 1000
           off2m: new option -x to exclude elements, -X removed
           minmax: new ellipsoid and superellipsoid surfaces, default
             algorithm is v
           Resources: new colour map files and generatable maps,
             uniform and Johnson model files removed and are now
             internal unit-edged and coloured, new uniform
             compounds (by Roger Kaufman), uniform duals,
             general duals (appending _d), geodesic spheres
           All: --help and --version options. New shift, step,
             and wrap modifiers for reindexing colour maps
           
         Fixes
           lat_grid: origin is the default centre for -c s

Version 0.19.1
02-12-08 Adrian Rossiter <adrian@antiprism.com>
         Fixes
           build: will build with GCC 4.3
           off_color: -e p outputs colour index numbers

Version 0.19
28-11-08 Adrian Rossiter <adrian@antiprism.com>