@@ -99,8 +99,9 @@ void planar_opts::usage()
 "\n"
 "Usage: %s [options] [input_file]\n"
 "\n"
-"Various\n"
-"input_file is not given the program reads from standard input.\n"
+"Read a file in OFF format and convert overlapping coplanar polygons into\n"
+"non-overlapping polygon tiles. If input_file is not given the program \n"
+"reads from standard input.\n"
 "\n"
 "Options\n"
 "%s"
