@@ -27,6 +27,8 @@ xx-xx-10 Adrian Rossiter <adrian@antiprism.com>
              -e Kk to colour sets of edges connected by edges,
              -vef M to convert colour indexes to values using map
              -I to convert colour values to indexes
+           planar: new program for blending colours of overlapping
+             coplanar polgons
            unipoly,johnson: programs removed, models are in resources
               see 'off_util -H uniform' and 'off_util -H johnson'
            polygon: many new models added, antiprism alignment changed
